# kenyan-counties

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
kenyan_counties/: __init__.py  admin.py  apps.py  core.py  data.py  fastapi.py  models.py
kenyan_counties/management/commands/: load_kenya_counties.py
kenyan_counties/migrations/: 0001_initial.py
tests/: test_core.py  test_fastapi.py
