[tool.poetry]
name = "kenyan-counties"
version = "0.1.0"
description = "A lightweight, performant, and scalable Python package for Kenyan counties, constituencies, and wards, optimized for FastAPI and Django."
authors = ["Nick Langat <nicksonlangat95@gmail.com>"]
readme = "README.md"
packages = [{include = "kenyan_counties"}]
license = "MIT"
homepage = "https://github.com/nicksonlangat/kenyan-counties"
repository = "https://github.com/nicksonlangat/kenyan-counties"
keywords = ["kenya", "counties", "constituencies", "wards", "django", "fastapi"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {version = ">=2.0", optional = true}
fastapi = {version = ">=0.100.0", optional = true}
django = {version = ">=3.2", optional = true}

[tool.poetry.extras]
fastapi = ["pydantic", "fastapi"]
django = ["django"]
all = ["pydantic", "django"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"
fastapi = "^0.109.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
